docs/examples/invalid/syntaxErr/extension/enum/InvalidEnumSemi.wacc
begin
  enum foo is
    A;
    B
    C;
    D
  end;
end
